# MiCAR-Authorization-Co-Pilot

./: .env.example  .gitignore  COPYRIGHT.md  LICENSE.txt  Makefile  README.md  compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_anchor_provenance.py  0003_anchor_review_note.py  0004_agent_runs.py  0005_agent_action_decision_note.py
backend/src/micar/: __init__.py  app.py  config.py  db.py  http.py  models.py  schemas.py
backend/src/micar/agents/: __init__.py  runtime.py
backend/src/micar/anchors/: __init__.py  changes.py  citation.py  ingest.py  resolver.py  seed_external.py  seed_level2.py  seed_micar.py
backend/src/micar/api/: access.py  agents.py  anchors.py  artifacts.py  audit.py  auth.py  intake.py  mandates.py
backend/src/micar/artifacts/: __init__.py  docx.py  package.py
backend/src/micar/compliance/: __init__.py  audit.py
backend/src/micar/intake/: __init__.py  schema.py  validation.py
backend/src/micar/reg_feed/: __init__.py
backend/src/micar/synthesis/: __init__.py  client.py  redaction.py
backend/src/micar/tracks/: __init__.py  (+5 more)
backend/tests/: conftest.py  test_access.py  test_agents.py  test_anchor_changes.py  test_anchor_verification.py  test_audit_access.py  test_auth_jwt.py  test_citation.py  test_citation_check.py  test_env_example.py  test_intake_validation.py  test_models.py  test_redaction.py  test_render_pipeline.py  test_seed.py  test_synthesis_gate.py  test_template_conditions.py  test_template_freshness.py  test_template_persistence.py  test_template_registry.py
(+61 files in other folders)
