[project]
name = "micar"
version = "0.1.0"
description = "MiCAR Authorization Co-Pilot: internal tool for ART/EMT/CASP licensing packages."
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "anthropic>=0.40",
    "instructor>=1.7",
    "tenacity>=9.0",
    "structlog>=24.4",
    "python-docx>=1.1",
    "pypdf>=5.0",
    "weasyprint>=63",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pyjwt>=2.10",
    "apscheduler>=3.10",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "python-multipart>=0.0.20",
    "email-validator>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.9",
    "mypy>=1.14",
    "freezegun>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/micar"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["SIM110", "B008"]  # B008: FastAPI's Depends() pattern

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
